--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,12 @@ permissions:
   contents: read
   packages: write
 
+env:
+  DOCKER_BUILDKIT: 1
+  # Ускоряет Testcontainers на CI (необязательно, но полезно)
+  TESTCONTAINERS_CHECKS_DISABLE: true
+  MAVEN_OPTS: -Xmx2g -XX:+TieredCompilation -XX:TieredStopAtLevel=1
+
 jobs:
   build-test-package:
     runs-on: ubuntu-latest
@@ -26,6 +32,8 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      # Для Testcontainers Docker уже доступен на ubuntu-latest. Никаких сервисов поднимать не нужно.
+
       - name: Build & Test (unit + integration)
         run: mvn -B -ntp verify
 
@@ -33,19 +41,27 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: surefire-reports
+          name: surefire-failsafe-reports
           path: |
-            **/target/surefire-reports/*.xml
-            **/target/failsafe-reports/*.xml
+            **/target/surefire-reports/**
+            **/target/failsafe-reports/**
 
-      - name: Upload JaCoCo coverage
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-report
-          path: |
-            **/target/site/jacoco/*.html
-            **/target/site/jacoco/jacoco.xml
+
+      # --- Docker build & publish в GHCR ---
+
+      - name: Set image name (lowercase)
+        id: imagename
+        run: |
+          REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "name=ghcr.io/${REPO_LC}" >> $GITHUB_OUTPUT
+
+      - name: Set up QEMU
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
@@ -60,7 +76,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ${{ steps.imagename.outputs.name }}
+          flavor: |
+            latest=true
           tags: |
             type=ref,event=branch
             type=sha
@@ -73,5 +91,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
